Création des bases du site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-test
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Team 4 - DESIGN4GREEN 2020</title>
+	</head>
+	
+	<body>
+		<h1>Team 4 - DESIGN4GREEN 2020</h1>
+
+		<h2>L'indice de fragilité numérique</h2>
+	</body>
+</html>
