--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
 		<h1>Team 4 - DESIGN4GREEN 2020</h1>
 
 		<h2>L'indice de fragilité numérique</h2>
+		<p align="justify">
+			L'indice de fragilité numérique révèle les zones d'exclusion numérique sur un territoire donné.
+			Cet outil permet, que vous soyez une commune, un département ou une région de comparer votre indice de fragilité numérique avec les autres territoires.
+			Il peut être associé à une représentation graphique afin d'aider la visualisation (ce ne sera pas le cas ici).
+		</p>
+		<p align="justify">
+			À ce jour, cet indice se compose de quatre indicateurs qui permettent de créer une analyse globale. 
+			Les deux premiers sont l'accès à l'information et aux interfaces numériques.
+			Les deux autres sont les compétences utilisation d'une interface et les compétences administratives.
+		</p>
 	</body>
 </html>
