Ajout du tableau et du CSS associé

--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html>
 	<head>
 		<title>Team 4 - DESIGN4GREEN 2020</title>
+		<meta charset="UTF-8">
+		<style>
+			table{
+				border-collapse: collapse;
+			}
+			th,td{
+				border: 1px solid black;
+				text-align: center;
+				width: 200px;
+			}
+		</style>
 	</head>
 	
 	<body>
@@ -18,5 +29,10 @@
 			Les deux premiers sont l'accès à l'information et aux interfaces numériques.
 			Les deux autres sont les compétences utilisation d'une interface et les compétences administratives.
 		</p>
+		<table>
+			<tr><th colspan="2">Accès</th><th colspan="2">Compétences</th></tr>
+			<tr><td>Accès aux interfaces numériques</td><td>Accès à l'information</td><td>Compétences administratives</td><td>Compétences numériques/scolaires</td></tr>
+			<tr><td>valeur1</td><td>valeur2</td><td>valeur3</td><td>valeur4</td></tr>
+		</table>
 	</body>
 </html>
