Ajout du code postal

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 			Les deux autres sont les compétences utilisation d'une interface et les compétences administratives.
 		</p>
 		<table>
-			<tr><th colspan="2">Commune</th><th colspan="2">Accès</th><th colspan="2">Compétences</th><th rowspan="2">Score Global</th></tr>
+			<tr><th rowspan="2">Code Postal</th><th colspan="2">Commune</th><th colspan="2">Accès</th><th colspan="2">Compétences</th><th rowspan="2">Score Global</th></tr>
 			<tr><td>Nom</td><td>Population</td><td>Accès aux interfaces numériques</td><td>Accès à l'information</td><td>Compétences administratives</td><td>Compétences numériques/scolaires</td></tr>
-			<tr><td>trou</td><td>plein plein</td><td>valeur1</td><td>valeur2</td><td>valeur3</td><td>valeur4</td><td>tadaaa</td></tr>
+			<tr><td>49 les meilleurs</td><td>trou</td><td>plein plein</td><td>valeur1</td><td>valeur2</td><td>valeur3</td><td>valeur4</td><td>tadaaa</td></tr>
 		</table>
 		<p>Pour le département "Département de trou" le score est de ...</p>
 		<p>Pour la région "Région de trou" le score est de ...</p>
