--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
 			Les deux premiers sont l'accès à l'information et aux interfaces numériques.
 			Les deux autres sont les compétences utilisation d'une interface et les compétences administratives.
 		</p>
+
+		<form>
+			<p>Chercher une commune par : </p>
+			<label for="CP">Code Postal</label>
+			<input type="text" name="CP" id="CP">
+			<label for="NomCommune">Nom de commune</label>
+			<select name="NomCommune" id="NomCommune">
+				<option value="1">Choisir une commune</option>
+			</select>
+		</form><br>
+
 		<table>
 			<tr><th rowspan="2">Code Postal</th><th colspan="2">Commune</th><th colspan="2">Accès</th><th colspan="2">Compétences</th><th rowspan="2">Score Global</th></tr>
 			<tr><td>Nom</td><td>Population</td><td>Accès aux interfaces numériques</td><td>Accès à l'information</td><td>Compétences administratives</td><td>Compétences numériques/scolaires</td></tr>
