--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<select name="NomCommune" id="NomCommune">
 				<option value="1">Choisir une commune</option>
 			</select>
-			<button onclick="rechercher()">Rechercher</button>
+			<button>Rechercher</button>
 		</form><br>
 
 		<table>
