--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			Les deux autres sont les compétences utilisation d'une interface et les compétences administratives.
 		</p>
 
-		<form>
+		<form method="get">
 			<p>Chercher une commune par : </p>
 			<label for="CP">Code Postal</label>
 			<input type="text" name="CP" id="CP">
