--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<select name="NomCommune" id="NomCommune">
 				<option value="1">Choisir une commune</option>
 			</select>
-			<button onclick="nodejs()">Rechercher</button>
+			<button onclick="/script.js/nodejs()">Rechercher</button>
 		</form><br>
 
 		<table>
