--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
 		<script type="text/javascript" src="script.js"></script>
 
 		<style>
+			body{
+				display: flex;
+				flex-direction: column;
+			}
+			.titre{
+				text-align: center;
+				background-color: green;
+			}
+			.formulaire{
+				display: flex;
+				justify-content: center;
+			}
+			form{
+				border: solid 1px gray;
+				width: 30%;
+				text-align: center;
+				margin-bottom: 10px;
+			}
+			form select{
+				margin-top: 10px;
+				margin-bottom: 10px;
+			}
 			table
 			{
 				border-collapse: collapse;
@@ -22,7 +44,7 @@
 	</head>
 	
 	<body>
-		<h1>Team 4 - DESIGN4GREEN 2020</h1>
+		<h1 class="titre">Team 4 - DESIGN4GREEN 2020</h1>
 
 		<h2>L'indice de fragilité numérique</h2>
 		<p align="justify">
@@ -35,17 +57,20 @@
 			Les deux premiers sont l'accès à l'information et aux interfaces numériques.
 			Les deux autres sont les compétences utilisation d'une interface et les compétences administratives.
 		</p>
-
-		<form>
-			<p>Chercher une commune par : </p>
-			<label for="CP">Code Postal</label>
-			<input type="text" name="CP" id="CP">
-			<label for="NomCommune">Nom de commune</label>
-			<select name="NomCommune" id="NomCommune">
-				<option value="1">Choisir une commune</option>
-			</select>
-			<button onclick="/script.js/nodejs()">Rechercher</button>
-		</form><br>
+		<div class="formulaire">
+			<form>
+				<p>Chercher une commune par : </p>
+				<label for="CP">Code Postal</label>
+				<input type="text" name="CP" id="CP">
+				<br>
+				<label for="NomCommune">Nom de commune</label>
+				<select name="NomCommune" id="NomCommune">
+					<option value="1">Choisir une commune</option>
+				</select>
+				<br>
+				<button onclick="/script.js/nodejs()">Rechercher</button>
+			</form>
+		</div>
 
 		<table>
 			<tr><th rowspan="2">Code Postal</th><th colspan="2">Commune</th><th colspan="2">Accès</th><th colspan="2">Compétences</th><th rowspan="2">Score Global</th></tr>
